Code cleanup and optimisation
* Also fixed SDK errors to properly support API 16+

Signed-off-by: Timothy Langer <zeevox.dev@gmail.com>